# TreeThinkerAgent

./: README.md  pyproject.toml  test.py  test2.py  test_tool.py
app/backend/: main.py
app/backend/api/: agent.py
app/backend/api/tools/: reasoning_tree_tools.py  web.py
app/backend/core/: llm.py  manager.py  mistralLlm.py  retry.py  tool.py
app/backend/core/agent/: agent_manager.py  llm.py  manager_backup.py  mistralLlm.py  ollamaLlm.py  openaiLlm.py  tool.py
app/backend/core/models/: leaf.py  prompt.py  tool_calls.py
app/backend/core/reasoningTree/: reasoning_tree.py
app/backend/schemas/: prompt.py
app/frontend/agent-frontend/: agent.js  app.js  index.html  layout.js  main.js  package-lock.json  package.json  styles.css
app/frontend/agent-frontend/canvas/: layout.js  minimap.js  panzoom.js  render.js
app/frontend/agent-frontend/core/: constants.js  utils.js
app/frontend/agent-frontend/data/: backend.js
app/frontend/agent-frontend/ui/: dom.js  inspector.js  palette.js  tabs.js  toast.js
