[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.2",
    "fastapi==0.115.9",
    "mistralai==1.5.0",
    "ollama==0.4.0",
    "openai==1.109.1",
    "requests==2.32.5",
    "uvicorn==0.37.0",
]
